gccida/c0/walk_tree
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1575:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *result; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1576:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resulta; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1577:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultb; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1578:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultc; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1579:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultd; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1580:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resulte; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1581:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultf; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1582:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultg; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1583:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resulth; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1584:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resulti; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1585:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultj; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1586:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultk; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1587:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultl; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1588:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultm; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1589:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *resultn; // [rsp+30h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1591:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+3Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1602:14: error: expected identifier or '('
 struct htab = ( htab_t)htab_; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1614:7: error: expected expression
if (  struct htab ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/tree-inline.c:1628:56: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( !statement_code_p( code) && code != TREE_LIST && !lang_hooks_0.tree_inlining.tree_chain_matters_p( *tpa) ) 
                                                       ^~~~~~~~~~~~
                                                       lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/walk_tree/src/obj/tree-inline.o] Error 1
